Attempting to build custom java API
and running tests on it.

Signed-off-by: Johan Fylling <johan.dev@fylling.se>

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ Temporary Items
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/clojure,leiningen,intellij,visualstudiocode,macos
+/test-results/
