--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -1,6 +1,10 @@
 name: Benchmark
 
 on:
+  push:
+    tags:
+      - '*'
+
   workflow_dispatch:
 
 jobs:
@@ -8,14 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
     - name: Update Jarl CSV
       run: lein perf-jarl
+
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v4
-      commit-message: Updating performance metrics
-      title: Updating performance metrics
-      body: Please do a "Rebase and merge", so the revision in the CSV stays relevant.
-      signoff: true
-      branch: bench
-      delete-branch: true
-      branch-suffix: short-commit-hash
+      with:
+        commit-message: Updating performance metrics
+        title: Updating performance metrics
+        body: Please do a "Rebase and merge", so the revision in the CSV stays relevant.
+        signoff: true
+        branch: bench
+        delete-branch: true
+        branch-suffix: short-commit-hash
