Setting `main` as default base branch for automated benchmark PR:s
Signed-off-by: Johan Fylling <johan.dev@fylling.se>

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -26,3 +26,4 @@ jobs:
         branch: bench
         delete-branch: true
         branch-suffix: short-commit-hash
+        base: main # Required for when triggered on tag push
