--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,11 @@ pom.xml.asc
 .cpcache/
 
 .eastwood
+
 .clj-kondo/.cache
+.clj-kondo/babashka/
+.clj-kondo/rewrite-clj/
+
 .cljs_node_repl/
 
 .rebel_readline_history
