--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'java'
 }
 
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
+
 group 'by.borge.jarl'
 version '0.0.1-SNAPSHOT'
 
