Documenting Java API
Signed-off-by: Johan Fylling <johan.dev@fylling.se>

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation files('../core/target/jarl-0.1.0-SNAPSHOT-standalone.jar')
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
 
