--- a/core/package.json
+++ b/core/package.json
@@ -1,8 +1,13 @@
 {
   "name": "jarl",
   "version": "0.0.1",
-  "private": true,
   "devDependencies": {
-    "shadow-cljs": "2.20.7"
+    "shadow-cljs": "2.20.7",
+    "source-map-support": "^0.5.21"
+  },
+  "dependencies": {
+    "@js-joda/core": "3.2.0",
+    "@js-joda/locale_en-us": "3.1.1",
+    "@js-joda/timezone": "2.5.0"
   }
 }
