--- a/api/build.gradle
+++ b/api/build.gradle
@@ -6,14 +6,14 @@ sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
 group 'by.borge.jarl'
-version '0.0.1-SNAPSHOT'
+version '0.1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation files('../core/target/jarl-0.1.0-SNAPSHOT-standalone.jar')
+    implementation files("../core/target/jarl-${version}-standalone.jar")
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
@@ -27,7 +27,7 @@ test {
 task lein(type: Exec) {
     workingDir("../core")
     commandLine 'lein', 'uberjar'
-    inputs.dir("../core/src")
-    outputs.file("../core/target/jarl-*-standalone.jar")
+    inputs.dir '../core/src'
+    outputs.files "../core/target/jarl-${version}-standalone.jar"
 }
 tasks.compileJava.dependsOn lein
