--- a/core/package.json
+++ b/core/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@js-joda/core": "3.2.0",
     "@js-joda/locale_en-us": "3.1.1",
-    "@js-joda/timezone": "2.5.0"
+    "@js-joda/timezone": "2.5.0",
+    "js-yaml": "4.1.0"
   }
 }
