removing kondo/lsp files
Signed-off-by: Peter Macdonald <macdonald.peter90@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/clojure,leiningen,intellij,visualstudiocode,macos
 /test-results/
+
+### Clojure ###
+.clj-kondo/
+.lsp/
