squash! Adding pom.xml
Signed-off-by: Kieran Othen <kieran.othen@mac.com>

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/clojure,leiningen,intellij,visualstudiocode,macos
 /test-results/
+.clj-kondo/
+.lsp/
