--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,7 +16,7 @@
   </licenses>
   <scm/>
   <build>
-    <sourceDirectory>src/main/clj</sourceDirectory>
+    <sourceDirectory>src/main/cljc</sourceDirectory>
     <testSourceDirectory>src/test/clj</testSourceDirectory>
     <resources>
       <resource>
@@ -47,7 +47,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>src/main/cljc</source>
+                <source>src/main/clj</source>
                 <source>src/main/java</source>
               </sources>
             </configuration>
